syntax = "proto3";

option go_package="github.com/althk/ganache/replmgr/proto";
import "google/protobuf/any.proto";
import "google/protobuf/timestamp.proto";

package ganache.replmgr;

service Repl {
	rpc SyncCache(stream CacheData) returns (stream CacheData) {}
}

message CacheData {
	string namespace = 1;
	string key = 2;
	google.protobuf.Any data = 3;
	string source = 4;
	int64 shard = 5;
	google.protobuf.Timestamp source_ts = 6;
	bool register = 7;
}